--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
 <!-- google icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;600&family=Pattaya&family=Raleway:ital,wght@0,300;0,400;0,600;0,700;0,800;1,700&display=swap" rel="stylesheet"> 
 
   </head>
   <body>
